# PBL2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  DataGenerator.cpp  Makefile  Note.txt  REFACTORING_SUMMARY.md
.qtcreator/: CMakeLists.txt.user.8e6c551
Extend/: Ticket.cpp
UI/: AccountsPage.cpp  AdminBookingsPage.cpp  AgentBookingsPage.cpp  AgentBookingsPage.h  AgentInterface.h  AgentListPage.cpp  AgentRevenueReportPage.cpp  AgentRevenueReportPage.h  AgentTicketsReportPage.h  AirportComboBox.cpp  Application.cpp  BoldItemDelegate.h  BookingDetailsDialog.cpp  BookingDialog.cpp  BookingDialog.h  ChangeBookingDialog.cpp  ChangeBookingDialog.h  DashboardPage.cpp  DashboardPage.h  FlightDialog.cpp  FlightDialog.h  FlightRulesPage.cpp  FlightRulesPage.h  FlightsPage.cpp  FlightsPage.h  ForgotPasswordPage.cpp  ForgotPasswordPage.h  PageRefresher.cpp  PageRefresher.h  PromotionsPage.cpp  RoutesPage.cpp  RoutesPage.h  SearchBookPage.cpp  main_qt.cpp
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  PBL2  cmake_install.cmake  compile_commands.json
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/data/: admins.txt  bookings.txt  flight_rules.txt  flights.txt  passengers.txt  promotions.txt  seat_config.txt
_codeql_build_dir/ftxui/: Makefile  cmake_install.cmake  ftxui-targets.cmake
_codeql_build_dir/ftxui/doc/: Makefile  cmake_install.cmake
_codeql_build_dir/ftxui/examples/: Makefile  cmake_install.cmake
_codeql_build_dir/pbl2_autogen/: deps  mocs_compilation.cpp
_codeql_build_dir/pbl2_autogen/WAYUIA5GRM/: moc_AccountsPage.cpp  moc_AccountsPage.cpp.d  moc_AdminInterface.cpp  moc_AdminInterface.cpp.d  moc_AdminReportPage.cpp  moc_AdminReportPage.cpp.d  moc_AgentBookingsPage.cpp  moc_AgentBookingsPage.cpp.d  moc_AgentInterface.cpp  moc_AgentInterface.cpp.d  moc_AgentReportPage.cpp  moc_AgentReportPage.cpp.d  moc_AirportComboBox.cpp  moc_AirportComboBox.cpp.d  moc_Application.cpp  moc_Application.cpp.d  moc_BookingDetailsDialog.cpp  moc_BookingDetailsDialog.cpp.d  moc_BookingDialog.cpp  moc_BookingDialog.cpp.d  moc_ChangePasswordDialog.cpp  moc_ChangePasswordDialog.cpp.d  moc_DashboardPage.cpp  moc_DashboardPage.cpp.d  moc_FlightsPage.cpp  moc_FlightsPage.cpp.d  moc_LoginPage.cpp  moc_LoginPage.cpp.d  moc_RoutesPage.cpp  moc_RoutesPage.cpp.d  moc_SearchBookPage.cpp  moc_SearchBookPage.cpp.d
app/: main.cpp
data/: accounts.txt  activity_logs.txt  admin.txt  admins.txt  agents.txt  airlines.txt  airports.txt  bookings.txt  flight_instances.txt  flight_instances.txt.bak  flight_rules.txt  flights.txt  flights.txt.backup  passengers.txt  promotions.txt  routes.txt  sales_report.txt  seat_config.txt  seat_maps.txt  seats.txt
include/: main_state.h
include/DSA/: AVLTree.h  DynamicArray.h  HashTable.h  SimpleMap.h
include/UI/: ChangeBookingDialog.h
include/UI/components/: Button.h  CheckBox.h  Label.h  TextBox.h
include/UI/dialogs/: Dialog.h
include/UI/pages/: AccountsPage.h  FlightsPage.h  Page.h  RoutesPage.h
include/UI/states/: AdminDashboardState.h  AdminShellState.h  LoginState.h  State.h
include/core/: AccountManager.h  AirportManager.h  App.h  BookingManager.h  FlightManager.h  MenuManager.h  PassengerManager.h  ReportManager.h  SeatManager.h  State.h  SystemManager.h
include/entities/: Account.h  AccountAdmin.h  AccountAgent.h  ActivityLog.h  Admin.h  Agent.h  Booking.h  Flight.h  FlightInstance.h  FlightRule.h  Passenger.h  Person.h  Promotion.h  Route.h  SalesReport.h  Seat.h  Ticket.h
include/interface/: Admin_Interface.h  Agent_Interface.h  Login_Interface.h
include/utils/: AuthenticationManager.h  DatabaseManager.h  DateTime.h  GenID.h  Helpers.h  PaymentProcessor.h  Sorting.h  Time.h
src/UI/: AccountsPage.cpp  AccountsPage.h  AdminBookingPage.cpp  AdminBookingPage.h  AdminBookingsPage.h  AdminInterface.cpp  AdminInterface.h  AdminReportPage.cpp  AdminReportPage.h  AdminRevenueReportPage.cpp  AdminRevenueReportPage.h  AdminTicketsReportPage.cpp  AdminTicketsReportPage.h  AgentBookingsPage.cpp  AgentBookingsPage.h  AgentInterface.cpp  AgentInterface.h  AgentListPage.h  AgentReportPage.cpp  AgentReportPage.h  AgentRevenueReportPage.cpp  AgentRevenueReportPage.h  AgentTicketsReportPage.cpp  AgentTicketsReportPage.h  AirportComboBox.cpp  AirportComboBox.h  Application.cpp  Application.h  BookingDetailsDialog.cpp  BookingDetailsDialog.h  BookingDialog.cpp  BookingDialog.h  ChangeBookingDialog.cpp  ChangeBookingDialog.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  DashboardPage.cpp  DashboardPage.h  FlightDialog.cpp  FlightDialog.h  (+16 more)
src/UI/components/: Button.cpp  CheckBox.cpp  TextBox.cpp
src/UI/pages/: AccountsPage.cpp  FlightsPage.cpp  RoutesPage.cpp
src/UI/states/: AdminDashboardState.cpp  AdminShellState.cpp  LoginState.cpp  State.cpp
src/core/: AccountManager.cpp  AirportManager.cpp  App.cpp  BookingManager.cpp  FlightManager.cpp  FlightRule.cpp  MenuManager.cpp  PassengerManager.cpp  ReportManager.cpp  SeatManager.cpp
src/entities/: Account.cpp  AccountAdmin.cpp  AccountAgent.cpp  ActivityLog.cpp  Admin.cpp  Agent.cpp  Booking.cpp  Flight.cpp  FlightInstance.cpp  FlightRule.cpp  Passenger.cpp  Person.cpp  Promotion.cpp  Route.cpp  SalesReport.cpp  Seat.cpp  Ticket.cpp  User.cpp
src/interface/: Admin_Interface.cpp  Agent_Interface.cpp  Login_Interface.cpp
src/utils/: DateTime.cpp  GenID.cpp  Helpers.cpp  Sorting.cpp  Time.cpp
